WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177735
Fix memory leaks in RenderMultiColumnFlow
https://bugs.webkit.org/show_bug.cgi?id=177735
Summary
Fix memory leaks in RenderMultiColumnFlow
Antti Koivisto
Reported
2017-10-02 00:38:09 PDT
Fix memory management.
Attachments
patch
(4.28 KB, patch)
2017-10-02 01:03 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2017-10-02 01:03:09 PDT
Created
attachment 322359
[details]
patch
WebKit Commit Bot
Comment 2
2017-10-02 09:00:32 PDT
Comment on
attachment 322359
[details]
patch Clearing flags on attachment: 322359 Committed
r222710
: <
http://trac.webkit.org/changeset/222710
>
WebKit Commit Bot
Comment 3
2017-10-02 09:00:33 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-10-02 09:01:29 PDT
<
rdar://problem/34767890
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug