Fix memory leaks in RenderMultiColumnFlow https://bugs.webkit.org/show_bug.cgi?id=177735

Reviewed by Zalan Bujtas.

* rendering/RenderMultiColumnFlow.cpp:
(WebCore::RenderMultiColumnFlow::evacuateAndDestroy):

    Switch from destroy() to removeFromParentAndDestroy() (they are currently equivalent in practice).

(WebCore::RenderMultiColumnFlow::fragmentedFlowDescendantInserted):

    Destroy the placeholders instead of leaking them.

(WebCore::RenderMultiColumnFlow::handleSpannerRemoval):

    Destroy the placeholder instead of leaking it.


Canonical link: https://commits.webkit.org/193993@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222710 268f45cc-cd09-0410-ab3c-d52691b4dbfc